Mejora en la consuta SWAPI
